Try to fix ui look on mobile. 1.1

--- a/application/static/src/scss/index.scss
+++ b/application/static/src/scss/index.scss
@@ -77,6 +77,7 @@ h5 {
     .secondary-article-container {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(autofit, 1fr);
+        height: 120vh;
     }
 
 }
